Remove offending field from a bibtex entry so that dsn paper build does not fail

--- a/doc/references/wmcsa.bib
+++ b/doc/references/wmcsa.bib
@@ -9,10 +9,10 @@
   year      = {2003},
   pages     = {170-180},
   ee        = {http://csdl.computer.org/comp/proceedings/wmcsa/2003/1995/00/19950170abs.htm},
-  crossref  = {DBLP:conf/wmcsa/2003},
   bibsource = {DBLP, http://dblp.uni-trier.de},
   abstract = {Users are increasingly inundated with small devices with communication and storage capabilities. Unfortunately, the user is still responsible for reconciling all of the devices whenever a change is made. We present Footloose, a user-centered data store that can share data and reconcile conflicts across diverse devices. Footloose is an optimistic system based on physical eventual consistency: consistency based on the movement of devices, and selective conflict resolution, which allows conflicts to flow through devices that cannot resolve the conflict to devices that can. Using these techniques, Footloose can present consistent views of data on the devices closest to the user without user interaction.}
 }
 
-
+# TODO: The following entry causes paper builds to fail
+#  crossref  = {DBLP:/conf/wmcsa/2003},
 
