Overall: 25/UA - Usenix SR Related Work Added a lot of references from the old simreal submission.

--- a/doc/references/asplos.bib
+++ b/doc/references/asplos.bib
@@ -1,5 +1,18 @@
 @string{asplos2009 = "ASPLOS 2009: Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems"}
 
+@string{asplos2006 = "ASPLOS 2006: Proceedings of the 12th International Conference on Architectural Support for Programming Languages and Operating Systems"}
+
+@inproceedings{narayanasamy:strata:asplos06,
+ author = {Satish Narayanasamy and Cristiano Pereira and Brad Calder},
+ title = "Recording shared memory dependencies using {S}trata",
+ booktitle = asplos2006,
+ year = {2006},
+ location = {San Jose, California, USA},
+ doi = {http://doi.acm.org/10.1145/1168857.1168886},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
 @inproceedings{DBLP:conf/asplos/CaulfieldGS09,
   author    = {Adrian M. Caulfield and Laura M. Grupp and Steven Swanson},
   title     = {Gordon: using flash memory to build fast, power-efficient
@@ -15,8 +28,7 @@
 @proceedings{conf/asplos/2009,
   editor    = {Mary Lou Soffa and
                Mary Jane Irwin},
-  title     = {Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems.
-               ASPLOS 2009, Washington, DC, USA, March 7-11, 2009},
+  title     = asplos2009,
   booktitle = {ASPLOS},
   publisher = {ACM},
   year      = {2009},
