--- a/doc/references/books.bib
+++ b/doc/references/books.bib
@@ -7,3 +7,27 @@
  address = {Boston, MA, USA},
  note = {Available at \url{http://research.microsoft.com/en-us/um/people/lamport/tla/tla.html}, accessed June 2009},
 }
+
+@book{brooks:man-month,
+author = "Fred P. Brooks",
+title = "The Mythical Man-Month: {E}ssays on Software Engineering",
+edition = "anniversary",
+publisher = "Addison-Wesley",
+year = "1995",
+}
+
+@book{friedman+wh:prog-langs,
+author = "Friedman, D. P. and Wand, M. and Haynes, C. T.",
+title = "Essentials of Programming Languages",
+edition = "2nd",
+publisher = "The MIT Press",
+year = "2001",
+}
+
+@book{oaks+w:java-threads,
+author = "Oaks, J. and Wong, H.",
+title = "Java Threads",
+edition = "3rd",
+publisher = "O'Reilly",
+year = "2004",
+}
