--- a/doc/references/cacm.bib
+++ b/doc/references/cacm.bib
@@ -1,11 +1,35 @@
+@string{cacm = "Communications of the ACM"}
+
 @article{lipton:reduction:cacm1975,
   author    = {Richard J. Lipton},
   title     = {Reduction: {A} Method of Proving Properties of Parallel Programs},
-  journal   = {Communications of the ACM},
+  journal   = cacm,
   volume    = {18},
   number    = {12},
   year      = {1975},
   pages     = {717--721},
   bibsource = {DBLP, http://dblp.uni-trier.de},
+}
+
+@article{lamport:time:cacm1978,
+author = "Leslie Lamport",
+title = "Time, clocks, and the ordering of events in a distributed system",
+journal = cacm,
+year = "1978",
+month = "July",
+volume = "21",
+number = "7",
+pages = "558--565",
+}
+
+@article{dupuy:nest:cacm1990,
+author = "Alexander Dupuy and Jed Schwartz and Yechiam Yemini and David Bacon",
+title = "{NEST}: {A} Network Simulation and Prototyping Testbed",
+journal = cacm,
+year = "1990",
+month = "October",
+volume = "33",
+number = "10",
+pages = "63--74",
 }
 
