--- a/doc/references/csur.bib
+++ b/doc/references/csur.bib
@@ -1,7 +1,9 @@
+@string{csur = "ACM Computing Surveys"}
+
 @article{Davidson85Consistency,
  author = {Susan B. Davidson and Hector Garcia-Molina and Dale Skeen},
  title = {Consistency in  partitioned networks},
- journal = {ACM Computing Surveys},
+ journal = csur,
  volume = {17},
  number = {3},
  year = {1985},
@@ -12,3 +14,14 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  }
+
+@article{schneider:state-machine:csur1990,
+author = "Schneider, F.",
+title = "Implementing fault-tolerant services using the state machine approach: {A} tutorial",
+journal = csur,
+volume = "22",
+number = "4",
+year = "1990",
+month = "December",
+pages = "299--319",
+}
