--- a/doc/references/ieeetoc.bib
+++ b/doc/references/ieeetoc.bib
@@ -1,10 +1,23 @@
+@string{ieeetoc = "IEEE Transactions on Computers"}
+
 @article{Meyer80Performability,
 title={On Evaluating the Performability of Degradable Computing Systems},
 author={Meyer, John F.},
-journal="IEEE Transactions on Computers",
+journal=ieeetoc,
 year={1980},
 month={August},
 volume={C-29},
 number={8},
 pages={720--731},
+}
+
+@ARTICLE{barton:fiat:ieee-toc1990,
+title="Fault injection experiments using {FIAT}",
+author={James H. Barton and Edward W. Czeck and Zary Z. Segall and Daniel P. Siewiorek},
+journal=ieeetoc,
+year={1990},
+month={Apr},
+volume={39},
+number={4},
+pages={575--582},
 }
