--- a/doc/references/osdi.bib
+++ b/doc/references/osdi.bib
@@ -1,12 +1,48 @@
+@string{osdi94 = "OSDI '94: Proceedings of the first Conference on Operating Systmes Design and Implementation"}
+@string{osdi02 = "OSDI '02: Proceedings of the fifth Conference on Operating Systmes Design and Implementation"}
 @string{osdi04 = "OSDI '04: Proceedings of the sixth Conference on Operating Systems Design and Implementation"}
 @string{osdi06 = "OSDI '06: Proceedings of the seventh Conference on Operating Systems Design and Implementation"}
+@string{osdi08 = "OSDI '08: Proceedings of the eight Conference on Operating Systems Design and Implementation"}
+
+@inproceedings{dahlin:cache:osdi1994,
+author = "Michael D. Dahlin and Randolph Y. Wang and Thomas E. Anderson and David A. Patterson",
+title = "Cooperative Caching: {U}sing Remote Client Memory to Improve File System Performance",
+booktitle = osdi94,
+pages = "267--280",
+month = "November",
+year = "1994",
+}
+
+@inproceedings{musuvathi:chess:osdi2008,
+author = "Madanlal Musuvathi and Shaz Qadeer and Thomas Ball and Gerard Basler and Piramanayagam Arumuga Nainar and Iulian Neamtiu",
+title = "Finding and Reproducing {H}eisenbugs in Concurrent Programs",
+booktitle = osdi08,
+month = "December",
+year = "2008",
+pages = "267--280",
+}
+
+@inproceedings{yin+kklm:gadara,
+author = "Wang, Y. and Kelly, T. and Kudlur, M. and Lafortune, S. and Mahlke, S.",
+title = "Gadara: {D}ynamic deadlock avoidance for multithreaded programs",
+booktitle = osdi08,
+month = "December",
+year = "2008",
+}
+
+@inproceedings{jula+tzc:deadlock,
+author = "Jula, H. and Tralamazza, D. and Zamfir, C. and Candea, G.",
+title = "Deadlock Immunity: {E}nabling Systems to Defend Against Deadlocks",
+booktitle = osdi08,
+month = "December",
+year = "2008",
+}
 
 @inproceedings{dean+g-mapreduce:2004,
  author = {Dean, Jeffrey and Ghemawat, Sanjay},
  title = {MapReduce: simplified data processing on large clusters},
  booktitle = osdi04,
  year = {2004},
- pages = {10--10},
  location = {San Francisco, CA},
  publisher = {USENIX Association},
  }
@@ -18,4 +54,11 @@
     pages = "205-218",
 month = "November",
     year = "2006"
+}
+
+@inproceedings{vahdat:modelnet:osdi2002,
+author = "Amin Vahdat and Ken Yocum and Kevin Walsh and Priya Mahadevan and Dejan Kosti\'{c} and Jeff Chase and David Becker",
+title = "Scalability and Accuracy in a Large-Scale Network Emulator",
+booktitle = osdi02,
+year = "2002",
 }
