--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -1,5 +1,17 @@
+@string{sosp1967 = "SOSP '67: Proceedings of the 1st ACM Symposium on Operating Systems Principles"}
+@string{sosp1991 = "SOSP '91: Proceedings of the 13th ACM Symposium on Operating Systems Principles"}
+@string{sosp2001 = "SOSP '01: Proceedings of the 18th ACM Symposium on Operating Systems Principles"}
 @string{sosp2003 = "SOSP '03: Proceedings of the 19th ACM Symposium on Operating Systems Principles"}
 @string{sosp2007 = "SOSP '07: Proceedings of the 21st ACM Symposium on Operating Systems Principles"}
+
+@inproceedings{tucek:triage:sosp2007,
+author = "Joseph Tucek and Shan Lu and Chengdu Huang and Spiros Xanthos and Yuanyuan Zhou",
+title = "Triage: {D}iagnosing Production Run Failures at the User's Site",
+booktitle = sosp2007,
+month = "October",
+year = "2007"
+}
+
 
 @inproceedings{ghemawat:google-fs:sosp2003,
   author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
@@ -23,4 +35,40 @@
   month = "October",
   pages = "205--220",
   note = "Available at \url{http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf}"
+}
+
+@inproceedings{vanhorn:criteria:sosp1967,
+author = "Earl C. van Horn",
+title = "Three criteria for designing computing systems to facilitate debugging",
+booktitle = sosp1967,
+pages = "7.1--7.5",
+month = "October",
+year = "1967",
+}
+
+@inproceedings{draves+brd:continuations:sosp1991,
+author = "Richard P. Draves and Brian N. Bershad and Richard F. Rashid and Randall W. Dean",
+title = "Using continuations to implement thread management and communication in operating systems",
+booktitle = sosp1991,
+month = "October",
+year = "1991",
+pages = "122--136",
+}
+
+@inproceedings{welsh+cb:seda:sosp2001,
+author = "Matt Welsh and David Culler and Eric Brewer",
+title = "{SEDA}: {A}n architecture for well-conditioned, scalable {I}nternet services",
+booktitle = sosp2001,
+month = "October",
+year = "2001",
+pages = "230--243",
+}
+
+@inproceedings{vonbehren:capriccio:sosp2003,
+author = "Rob von Behrenm and Jeremy Condit and Feng Zhou and George C. Necula and Eric Brewer",
+title = "Capriccio: {S}calable threads for {I}nternet services",
+booktitle = sosp2003,
+month = "October",
+year = "2003",
+pages = "268--281",
 }
