--- a/doc/references/ieee-computer.bib
+++ b/doc/references/ieee-computer.bib
@@ -1,4 +1,4 @@
-@string{ieee-computer = "Computer"}
+@string{ieee-computer = "IEEE Computer"}
 @article{barroso+h:energy-proportional:computer07,
  author = {Barroso, Luiz Andr\'{e} and H\"{o}lzle, Urs},
  title = {The Case for Energy-Proportional Computing},
@@ -16,7 +16,7 @@
 @article{prechelt:compare-seven-languages:2000,
   author = {Prechelt, Lutz},
   title = {An Empirical Comparison of Seven Programming Languages},
-  journal = {Computer},
+  journal = ieee-computer,
   volume = {33},
   number = {10},
   year = {2000},
@@ -26,4 +26,15 @@
   publisher = {IEEE Computer Society Press},
   address = {Los Alamitos, CA, USA},
   note = "Available at \url{http://page.mi.fu-berlin.de/~prechelt/Biblio/jccpprt_computer2000.pdf} accessed June 2009",
+}
+
+@article{lee:threads:computer2006,
+author = "Edward A. Lee",
+title = "The problem with threads",
+journal = ieee-computer,
+year = "2006",
+month = "May",
+volume = "39",
+number = "5",
+pages = "33--42",
 }
