* A few new references.

--- a/doc/references/books.bib
+++ b/doc/references/books.bib
@@ -7,3 +7,11 @@
  address = {Boston, MA, USA},
  note = {Available at \url{http://research.microsoft.com/en-us/um/people/lamport/tla/tla.html}, accessed June 2009},
 }
+
+@book{macwilliams:ecc:1978,
+  author = {MacWilliams, F. J. and Sloane, N. J. A.},
+  title = {The Theory of Error-Correcting Codes},
+  year = {1978},
+  publisher = {North Holland},
+  address = {Amsterdam},
+}
