--- a/doc/references/sigmod.bib
+++ b/doc/references/sigmod.bib
@@ -28,3 +28,15 @@
 }
 
 	
+@inproceedings{patterson:raid:sigmod1998,
+ author = {Patterson, David A. and Gibson, Garth and Katz, Randy H.},
+ title = {A case for redundant arrays of inexpensive disks (RAID)},
+ booktitle = {SIGMOD '88: Proceedings of the 1988 ACM SIGMOD international conference on Management of data},
+ year = {1988},
+ isbn = {0-89791-268-3},
+ pages = {109--116},
+ location = {Chicago, Illinois, United States},
+ doi = {http://doi.acm.org/10.1145/50202.50214},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
