--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -124,3 +124,16 @@
   note = "Available at \url{http://www.mvdirona.com/jrh/TalksAndPapers/JamesHamilton_POA20090226.pdf} Accessed September 2009"
 }
 
+@misc{facebook:cassandra:web,
+  title = "Cassandra",
+  note = {Available at \url{http://incubator.apache.org/cassandra/}. Accessed December 2009.},
+  key = "cassandra"
+}
+
+
+@misc{hirabayashi:tokyocabinet:web,
+  title = "Tokyocabinet",
+  note = {Available at \url{http://1978th.net/tokyocabinet/}. Accessed December 2009.},
+  key = "tokyocabinet"
+}
+
