* Some clean-ups for DSN10 submission.

--- a/doc/references/asplos.bib
+++ b/doc/references/asplos.bib
@@ -1,6 +1,8 @@
-@string{asplos2009 = "ASPLOS 2009: Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems"}
 @string{asplos1998 = "ASPLOS 1998: Proceedings of the 8th International Conference on Architectural Support for Programming Languages and Operating Systems"}
+@string{asplos2000 = "ASPLOS 2000: Proceedings of the 9th International Conference on Architectural Support for Programming Languages and Operating Systems"}
+@string{asplos2004 = "ASPLOS 2004: Proceedings of the 11th International Conference on Architectural Support for Programming Languages and Operating Systems"}
 @string{asplos2006 = "ASPLOS 2006: Proceedings of the 12th International Conference on Architectural Support for Programming Languages and Operating Systems"}
+@string{asplos2009 = "ASPLOS 2009: Proceedings of the 14th International Conference on Architectural Support for Programming Languages and Operating Systems"}
 
 @inproceedings{narayanasamy:strata:asplos06,
  author = {Satish Narayanasamy and Cristiano Pereira and Brad Calder},
@@ -39,8 +41,8 @@
 
 @inproceedings{saito:fab:asplos2004,
  author = {Saito, Yasushi and Fr{\o}lund, Svend and Veitch, Alistair and Merchant, Arif and Spence, Susan},
- title = {FAB: building distributed enterprise disk arrays from commodity components},
- booktitle = {ASPLOS-XI: Proceedings of the 11th international conference on Architectural support for programming languages and operating systems},
+ title = {{FAB}: {B}uilding distributed enterprise disk arrays from commodity components},
+ booktitle = asplos2004,
  year = {2004},
  isbn = {1-58113-804-0},
  pages = {48--58},
@@ -63,8 +65,9 @@
                David Rochberg and
                Jim Zelenka},
   title     = {A Cost-Effective, High-Bandwidth Storage Architecture},
-  booktitle = {asplos1998},
+  booktitle = asplos1998,
   year      = {1998},
+  month     = {October},
   pages     = {92--103},
   ee        = {http://doi.acm.org/10.1145/291069.291029},
   bibsource = {DBLP, http://dblp.uni-trier.de}
@@ -73,15 +76,15 @@
 @inproceedings{kubiatowicz:oceanstore:asplos2000,
   address = {Boston, MA},
   author = {Kubiatowicz, John and Bindel, David and Chen, Yan and Czerwinski, Steven and Eaton, Patrick and Geels, Dennis and Gummadi, Ramakrishna and Rhea, Sean and Weatherspoon, Hakim and Weimer, Westley and Wells, Chris and Zhao, Ben},
-  booktitle = {Proceeedings of the Ninth International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS 2000)},
+  booktitle = asplos2000,
   citeulike-article-id = {162294},
   keywords = {bibtex-import},
-  month = {November},
   pages = {190--201},
   posted-at = {2005-04-16 04:31:45},
   priority = {2},
   title = {{OceanStore}: An architecture for global-scale persistent storage},
   year = {2000},
+  month = {November},
   abstract = {OceanStore is a utility infrastructure designed to span the globe and provide continuous access to persistent information. Since this infrastructure is comprised of untrusted servers, data is protected through redundancy and cryptographic techniques. To improve performance, data is allowed to be cached anywhere, anytime. Additionally, monitoring of usage patterns allows adaptation to regional outages and denial of service attacks; monitoring also enhances performance through pro-active movement of data. A prototype implementation is currently under development.}
 }
 
