--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -11,9 +11,9 @@ pages={417--426},
 }
 
 @inproceedings{goodson:efficient-byzantine-tolerant-erasure-coded-storage:dsn2004,
-title={Efficient Byzantine-tolerant erasure-coded storage},
+title={Efficient {B}yzantine-tolerant erasure-coded storage},
 author={Goodson, G.R. and Wylie, J.J. and Ganger, G.R. and Reiter, M.K.},
-booktitle={Dependable Systems and Networks, 2004 International Conference on},
+booktitle=dsn2004,
 year={2004},
 month={June-1 July},
 pages={135--144},
