--- a/doc/references/fast.bib
+++ b/doc/references/fast.bib
@@ -1,7 +1,9 @@
+@string{fast2003 = "Proceedings of the 2nd USENIX Conference on File and Storage Technologies"}
+
 @inproceedings{rhea:pond:fast2003,
  author = {Rhea, Sean and Eaton, Patrick and Geels, Dennis and Weatherspoon, Hakim and Zhao, Ben and Kubiatowicz, John},
- title = {Pond: The OceanStore Prototype},
- booktitle = {FAST '03: Proceedings of the 2nd USENIX Conference on File and Storage Technologies},
+ title = {Pond: The {OceanStore} Prototype},
+ booktitle = fast2003,
  year = {2003},
  pages = {1--14},
  location = {San Francisco, CA},
@@ -16,6 +18,7 @@
  title = {Ursa minor: versatile cluster-based storage},
  booktitle = {FAST'05: Proceedings of the 4th conference on USENIX Conference on File and Storage Technologies},
  year = {2005},
+ pages = {59--72},
  location = {San Francisco, CA},
  publisher = {USENIX Association},
  address = {Berkeley, CA, USA},
