--- a/doc/references/icdcs.bib
+++ b/doc/references/icdcs.bib
@@ -1,3 +1,5 @@
+@string{icdcs2004 = "Proceedings of the 24th International Conference on Distributed Computing Systems"}
+
 @inproceedings{costa:epidemic-algorithms:icdcs2004,
   author    = {Paolo Costa and
                Matteo Migliavacca and
@@ -5,10 +7,10 @@
                Gianpaolo Cugola},
   title     = {Epidemic Algorithms for Reliable Content-Based Publish-Subscribe:
                An Evaluation},
-  booktitle = {ICDCS},
-  month     = mar,
+  booktitle = {icdcs2004},
+  month     = {March},
   year      = {2004},
-  pages     = {552-561},
+  pages     = {552--561},
   ee        = {http://csdl.computer.org/comp/proceedings/icdcs/2004/2086/00/20860552abs.htm},
   abstract = {Distributed content-based publish-subscribe middleware is emerging as a promising answer to the demands of modern distributed computing. Nevertheless, currently available systems usually do not provide reliability guarantees, which hampers their use in dynamic and unreliable scenarios, notably including mobile ones. In this paper, we evaluate the effectiveness of an approach based on epidemic algorithms. Three algorithms we originally proposed in [1] are here thoroughly compared and evaluated through simulation in a challenging unreliable setting. The results show that our use of epidemic algorithms improves signicantly event delivery, is scalable, and introduces only limited overhead.}
 }
