--- a/doc/references/ieeejsac.bib
+++ b/doc/references/ieeejsac.bib
@@ -1,3 +1,5 @@
+@string{ieeejsac = "IEEE Journal on Selected Areas in Communications"}
+
 @article{zhao:tapestry:ieeejsac2004,
   author    = {Ben Y. Zhao and
                Ling Huang and
@@ -5,8 +7,8 @@
                Sean C. Rhea and
                Anthony D. Joseph and
                John Kubiatowicz},
-  title     = {Tapestry: a resilient global-scale overlay for service deployment},
-  journal   = {IEEE Journal on Selected Areas in Communications},
+  title     = {Tapestry: A resilient global-scale overlay for service deployment},
+  journal   = ieeejsac,
   volume    = {22},
   number    = {1},
   year      = {2004},
