--- a/doc/references/ieeetoc.bib
+++ b/doc/references/ieeetoc.bib
@@ -26,7 +26,7 @@ pages={575--582},
 @article{satyanarayanan:coda:ieeetoc1990,
  author = {Satyanarayanan, Mahadev and Kistler, James J. and Kumar, Puneet and Okasaki, Maria E. and Siegel, Ellen H. and Steere, David C.},
  title = {Coda: A Highly Available File System for a Distributed Workstation Environment},
- journal = {IEEE Trans. Comput.},
+ journal = ieeetoc,
  volume = {39},
  number = {4},
  year = {1990},
