--- a/doc/references/jacm.bib
+++ b/doc/references/jacm.bib
@@ -1,21 +1,12 @@
-% TODO: Move towards common key naming rather than duplicating entries.
-@ARTICLE{dwork:jacm:88,
+@string{jacm = "Journal of the ACM"}
+
+@ARTICLE{dwork:partial-sync:jacm1988,
     AUTHOR = "Cynthia {Dwork} and Nancy {Lynch} and Larry {Stockmeyer}",
     TITLE = "{C}onsensus in the presence of partial synchrony",
     YEAR = "1988",
-    JOURNAL = "Journal of the Association for Computing Machinery",
+    JOURNAL = jacm,
     VOLUME = "35",
     NUMBER = "2",
     PAGES = "288--323",
     PUBLISHER = "ACM"}
 
-@ARTICLE{Dwork88,
-    AUTHOR = "Cynthia {Dwork} and Nancy {Lynch} and Larry {Stockmeyer}",
-    TITLE = "{C}onsensus in the presence of partial synchrony",
-    YEAR = "1988",
-    JOURNAL = "Journal of the Association for Computing Machinery",
-    VOLUME = "35",
-    NUMBER = "2",
-    PAGES = "288--323",
-    PUBLISHER = "ACM",
-    KEY = "Dwork88"}
