--- a/doc/references/nsdi.bib
+++ b/doc/references/nsdi.bib
@@ -1,11 +1,14 @@
-@string{nsdi2006 = "NSDI06: Proceedings of the Third Symposium on Networked Systems Design and Implementation (NSDI)"} %long
+@string{nsdi2006 = "NSDI06: Proceedings of the Third Symposium on Networked Systems Design and Implementation"} %long
 %short: @string{nsdi2006 = "Proc. 3rd NSDI"} 
 
-@string{nsdi2007 = "NSDI07: Proceedings of the Fourth Symposium on Networked Systems Design and Implementation (NSDI)"} %long
+@string{nsdi2007 = "NSDI07: Proceedings of the Fourth Symposium on Networked Systems Design and Implementation"} %long
 %short: @string{nsdi2007 = "Proc. 4th NSDI"} 
 
-@string{nsdi2008 = "NSDI08: Proceedings of the Fifth Symposium on Networked Systems Design and Implementation (NSDI)"} %long
+@string{nsdi2008 = "NSDI08: Proceedings of the Fifth Symposium on Networked Systems Design and Implementation"} %long
 %short: @string{nsdi2008 = "Proc. 5th NSDI"} 
+
+@string{nsdi2009 = "NSDI09: Proceedings of the Sixth Symposium on Networked Systems Design and Implementation"} %long
+%short: @string{nsdi2009 = "Proc. 6th NSDI"} 
 
 @inproceedings{reynolds:pip:nsdi2006,
   author = "Patrick Reynolds and Charles Killian and Janet L. Wiener and Jeffrey C. Mogul and Mehul A. Shah and Amin Vahdat",
@@ -20,7 +23,7 @@
 @inproceedings{stribling:wheelfs:nsdi2009,
  author = {Stribling, Jeremy and Sovran, Yair and Zhang, Irene and Pretzer, Xavid and Li, Jinyang and Kaashoek, M. Frans and Morris, Robert},
  title = {Flexible, wide-area storage for distributed systems with WheelFS},
- booktitle = {NSDI'09: Proceedings of the 6th USENIX symposium on Networked systems design and implementation},
+ booktitle = nsdi2009,
  year = {2009},
  pages = {43--58},
  location = {Boston, Massachusetts},
