--- a/doc/references/os-review.bib
+++ b/doc/references/os-review.bib
@@ -28,7 +28,7 @@
 @article{weatherspoon:gossiping-over-storage-systems-is-practical:os-review2007,
  author = {Weatherspoon, Hakim and Miranda, Hugo and Iwanicki, Konrad and Ghodsi, Ali and Busnel, Yann},
  title = {Gossiping over storage systems is practical},
- journal = {SIGOPS Oper. Syst. Rev.},
+ journal = sigopsosr,
  volume = {41},
  number = {5},
  year = {2007},
