--- a/doc/references/sigact.bib
+++ b/doc/references/sigact.bib
@@ -1,6 +1,6 @@
 @article{Gilbert02,
 author = "Gilbert, Seth and Lynch, Nancy",
-title = "Brewer's conjecture and the feasibility of consistent, available, partition-tolerant web services",
+title = "Brewer's conjecture and the feasibility of consistent, available, partition-tolerant {W}eb services",
 journal = "ACM SIGACT News",
 volume = "33",
 number = "2",
