--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -22,14 +22,14 @@ year = "2007"
   title     = {Managing Update Conflicts in Bayou, a Weakly Connected Replicated Storage System},
   booktitle = sosp1995,
   year      = {1995},
-  pages     = {172-183},
+  pages     = {172--183},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
 
 @inproceedings{ghemawat:google-fs:sosp2003,
   author = {Ghemawat, Sanjay and Gobioff, Howard and Leung, Shun-Tak},
-  title = "{The Google file system}",
+  title = {The Google file system},
   booktitle = sosp2003,
   doi = {10.1145/945445.945450},
   isbn = {1581137575},
@@ -38,6 +38,7 @@ year = "2007"
   publisher = {ACM Press},
   url = {http://dx.doi.org/10.1145/945445.945450},
   year = {2003}
+  month = {October}
 }
 
 @inproceedings{decandia:dynamo:sosp2007,
@@ -48,7 +49,7 @@ year = "2007"
   year = "2007",
   month = "October",
   pages = "205--220",
-  note = "Available at \url{http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf}",
+%  note = "Available at \url{http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf}",
 }
 
 @InProceedings{rowstron:PAST:sosp2001,
@@ -56,10 +57,10 @@ year = "2007"
                 large-scale, persistent peer-to-peer storage utility},
   author   = "Antony Rowstron and Peter Druschel",
   year     = 2001,
-  booktitle = "18th ACM Symposium on Operating Systems Principles (SOSP'01)",
+  booktitle = sosp2001,
   location = "Chateau Lake Louise, Banff, Canada",
-  moonth    = oct,
-  pages    = "188-201",
+  month    = October,
+  pages    = "188--201",
   abstract = {This paper presents and evaluates the storage management
 and caching in PAST, a large-scale peer-to-peer persistent
 storage utility. PAST is based on a self-organizing, Internetbased
