--- a/doc/references/sss.bib
+++ b/doc/references/sss.bib
@@ -1,8 +1,11 @@
-@inproceedings{baldoni:unconscious-eventual-consistency-with-gossips:sss2007,
+@string{sss2006 = "Proceedings of the Eighth International Symposium on Stabilization, Safety and Security of Distributed Systems"} 
+
+@inproceedings{baldoni:unconscious-eventual-consistency-with-gossips:sss2006,
     author = {Roberto Baldoni and Rachid Guerraoui and Ron R. Levy and Vivien Quéma and Sara Tucci Piergiovanni},
     title = {Unconscious eventual consistency with gossips},
-    booktitle = {In Proceedings of the Eight International Symposium on Stabilization, Safety and Security of Distributed Systems},
-    year = {2007},
+    booktitle = {sss2006},
+    year = {2006},
+    pages = {65--81},
     publisher = {Springer},
     abstract = {This paper presents a replication protocol that ensures even-
 tual consistency in large-scale distributed systems subject to network
