--- a/doc/references/toit.bib
+++ b/doc/references/toit.bib
@@ -1,7 +1,9 @@
+@string{acmtoit = "ACM Transactions on Internet Technology"}
+
 @article{fielding:REST:TOIT2002,
 author = {Fielding, Roy T. and Taylor, Richard N.},
-title = {Principled design of the modern Web architecture},
-journal = {ACM Trans. Internet Technol.},
+title = {Principled design of the modern {W}eb architecture},
+journal = acmtoit,
 volume = {2},
 number = {2},
 year = {2002},
