--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -144,7 +144,7 @@
 
 
 @misc{hirabayashi:tokyocabinet:web,
-  title = "Tokyocabinet",
+  title = "Tokyo Cabinet",
   note = {Available at \url{http://1978th.net/tokyocabinet/}. Accessed December 2009.},
   key = "tokyocabinet"
 }
