--- a/doc/references/sigcomm.bib
+++ b/doc/references/sigcomm.bib
@@ -6,6 +6,7 @@ title = "Chord: A Scalable Peer-to-Peer Lookup Service for {I}nternet Applicatio
 booktitle = sigcomm2001,
 pages = "149--160",
 year = "2001",
+month = "August",
 abstract = {A fundamental problem that confronts peer-to-peer applications is to efficiently locate the node that stores a particular data item. This paper presents Chord, a distributed lookup protocol that addresses this problem. Chord provides support for just one operation: given a key, it maps the key onto a node. Data location can be easily implemented on top of Chord by associating a key with each data item, and storing the key/data item pair at the node to which the key maps. Chord adapts efficiently as nodes join and leave the system, and can answer queries even if the system is continuously changing. Results from theoretical analysis, simulations, and experiments show that Chord is scalable, with communication cost and the state maintained by each node scaling logarithmically with the number of Chord nodes.}
 }
 
@@ -15,4 +16,5 @@ title = "A Scalable Content Addressable Network",
 booktitle = sigcomm2001,
 pages = "161--172",
 year = "2001",
+month = "August",
 }
