* Minor clean-ups; added a paper by Vogels.

--- a/doc/references/cacm.bib
+++ b/doc/references/cacm.bib
@@ -33,3 +33,16 @@ number = "10",
 pages = "63--74",
 }
 
+@article{vogels:eventual-consistency:cacm2008,
+ author = {Vogels, Werner},
+ title = {Eventually consistent},
+ journal = cacm,
+ volume = {52},
+ number = {1},
+ year = {2009},
+ issn = {0001-0782},
+ pages = {40--44},
+ doi = {http://doi.acm.org/10.1145/1435417.1435432},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
