--- a/doc/references/sosp.bib
+++ b/doc/references/sosp.bib
@@ -37,10 +37,11 @@ year = "2007"
   pages = {29--43},
   publisher = {ACM Press},
   url = {http://dx.doi.org/10.1145/945445.945450},
-  year = {2003}
-  month = {October}
+  year = {2003},
+  month = {October},
 }
 
+%  note = "Available at \url{http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf}",
 @inproceedings{decandia:dynamo:sosp2007,
   title = "Dynamo: {A}mazon's highly available key-value store",
   author = "Guiseppe DeCandia and Deniz Hastorun and Madan Jampani and Gunavardhan Kakulapati and Avinash Lakshman and Alex Pilchin and Swami Sivasubramanian and Peter Vosshall and Werner Vogels",
@@ -49,7 +50,6 @@ year = "2007"
   year = "2007",
   month = "October",
   pages = "205--220",
-%  note = "Available at \url{http://www.allthingsdistributed.com/files/amazon-dynamo-sosp2007.pdf}",
 }
 
 @InProceedings{rowstron:PAST:sosp2001,
